# smallserve

./: Cargo.toml  LICENSE  README.md  index.html
src/: main.rs
